--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,10 @@ h4 {
 	padding: 3px;
 }
 
+#bloodThirst {
+	background-color: red;
+	color: white;
+}
 .sprite {
 	position: center;
 	align-items: baseline;
